# HA-Fleet-Tooling

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: DEVICE_PROVISIONING_GUIDE.md
examples/bundles/: routine.yaml
examples/bundles/routine/: automations.yaml  bundle.yaml  input_booleans.yaml  scripts.yaml
examples/bundles/tasks/: automations.yaml  bundle.yaml  input_helpers.yaml
examples/bundles/transit/: automations.yaml  bundle.yaml  input_helpers.yaml
examples/minimal_site/: site_manifest.yaml
ha_fleet/: __init__.py
ha_fleet/backup/: __init__.py  haos.py
ha_fleet/bundles/: __init__.py  engine.py
ha_fleet/cli/: __init__.py  commands.py
ha_fleet/deploy/: __init__.py
ha_fleet/discovery/: __init__.py  ingest.py
ha_fleet/render/: __init__.py  config.py
ha_fleet/schemas/: __init__.py  bundle.py  secrets.py  site.py
ha_fleet/utils/: __init__.py
tests/: __init__.py  fixtures.py  test_backup.py  test_bundles.py  test_cli.py  test_ingest.py  test_render.py  test_schemas.py
